--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
       $(document).ready(function() {
+        //requête AJAX pour récupérer la réponse json
         $.ajax({
           url: 'https://web-app-php-houssais1.azurewebsites.net',
           dataType: 'json',
